--- a/InstaDB/Views/Landing/Landing.storyboard
+++ b/InstaDB/Views/Landing/Landing.storyboard
@@ -1,7 +1,100 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Wd1-Yg-zsB">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Landing View Controller-->
+        <scene sceneID="z9I-Be-OMn">
+            <objects>
+                <viewController id="Wd1-Yg-zsB" customClass="LandingViewController" customModule="InstaDB" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="j0b-sO-Ge2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="XqE-w3-ZZJ">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TzT-H2-Sjn">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="185"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oOW-mr-O2D">
+                                        <rect key="frame" x="0.0" y="185" width="375" height="185"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to InstaDB" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4vs-2p-7a5">
+                                                <rect key="frame" x="107" y="82" width="161" height="20.5"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please login to Dropbox to manage your images" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="azW-dM-E0x">
+                                                <rect key="frame" x="47.5" y="110.5" width="281" height="38"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="azW-dM-E0x" firstAttribute="centerX" secondItem="4vs-2p-7a5" secondAttribute="centerX" id="JZ2-4t-3wE"/>
+                                            <constraint firstItem="4vs-2p-7a5" firstAttribute="centerX" secondItem="oOW-mr-O2D" secondAttribute="centerX" id="W5c-Y6-RWf"/>
+                                            <constraint firstItem="azW-dM-E0x" firstAttribute="top" secondItem="4vs-2p-7a5" secondAttribute="bottom" constant="8" id="d6s-pu-Py3"/>
+                                            <constraint firstItem="4vs-2p-7a5" firstAttribute="centerY" secondItem="oOW-mr-O2D" secondAttribute="centerY" id="dYL-BV-fPz"/>
+                                            <constraint firstItem="azW-dM-E0x" firstAttribute="width" secondItem="oOW-mr-O2D" secondAttribute="width" multiplier="0.75" id="fpB-3W-pew"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zLJ-4C-piU">
+                                        <rect key="frame" x="0.0" y="370" width="375" height="277"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k8c-2K-aOe">
+                                                <rect key="frame" x="29" y="74.5" width="317" height="128"/>
+                                                <state key="normal" image="Dropbox"/>
+                                                <connections>
+                                                    <action selector="dropboxButtonTapped" destination="Wd1-Yg-zsB" eventType="touchUpInside" id="3r1-SE-trB"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="k8c-2K-aOe" firstAttribute="centerY" secondItem="zLJ-4C-piU" secondAttribute="centerY" id="0Ey-23-9ni"/>
+                                            <constraint firstItem="k8c-2K-aOe" firstAttribute="width" relation="lessThanOrEqual" secondItem="zLJ-4C-piU" secondAttribute="width" id="14h-rN-PwE"/>
+                                            <constraint firstItem="k8c-2K-aOe" firstAttribute="centerX" secondItem="zLJ-4C-piU" secondAttribute="centerX" id="L0K-NQ-f2U"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="oOW-mr-O2D" firstAttribute="height" secondItem="zLJ-4C-piU" secondAttribute="height" multiplier="2:3" id="CWC-IB-MWk"/>
+                                    <constraint firstItem="TzT-H2-Sjn" firstAttribute="height" secondItem="oOW-mr-O2D" secondAttribute="height" id="NRs-dD-Vaa"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Uiq-eK-kzK" firstAttribute="bottom" secondItem="XqE-w3-ZZJ" secondAttribute="bottom" id="UyX-0t-BGE"/>
+                            <constraint firstItem="Uiq-eK-kzK" firstAttribute="trailing" secondItem="XqE-w3-ZZJ" secondAttribute="trailing" id="XIk-Bc-SLV"/>
+                            <constraint firstItem="XqE-w3-ZZJ" firstAttribute="top" secondItem="Uiq-eK-kzK" secondAttribute="top" id="ffX-VN-2c0"/>
+                            <constraint firstItem="XqE-w3-ZZJ" firstAttribute="leading" secondItem="Uiq-eK-kzK" secondAttribute="leading" id="iiE-Ez-ZFO"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Uiq-eK-kzK"/>
+                    </view>
+                    <connections>
+                        <outlet property="dropboxButton" destination="k8c-2K-aOe" id="Kgm-Cl-jmp"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a1M-sT-mSb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="144.80000000000001" y="111.99400299850076"/>
+        </scene>
+    </scenes>
+    <resources>
+        <image name="Dropbox" width="317" height="128"/>
+    </resources>
 </document>
