--- a/InstaDB/Views/Landing/Landing.storyboard
+++ b/InstaDB/Views/Landing/Landing.storyboard
@@ -76,20 +76,20 @@
                                 </constraints>
                             </stackView>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="De4-5t-PI4">
-                                <rect key="frame" x="0.0" y="10" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" red="0.50344406011450382" green="0.50344406011450382" blue="0.50344406011450382" alpha="0.49768587085308058" colorSpace="custom" customColorSpace="sRGB"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="De4-5t-PI4" firstAttribute="centerX" secondItem="Uiq-eK-kzK" secondAttribute="centerX" id="CVI-ca-7Ox"/>
+                            <constraint firstItem="De4-5t-PI4" firstAttribute="centerX" secondItem="j0b-sO-Ge2" secondAttribute="centerX" id="CVI-ca-7Ox"/>
                             <constraint firstItem="Uiq-eK-kzK" firstAttribute="bottom" secondItem="XqE-w3-ZZJ" secondAttribute="bottom" id="UyX-0t-BGE"/>
                             <constraint firstItem="Uiq-eK-kzK" firstAttribute="trailing" secondItem="XqE-w3-ZZJ" secondAttribute="trailing" id="XIk-Bc-SLV"/>
                             <constraint firstItem="XqE-w3-ZZJ" firstAttribute="top" secondItem="Uiq-eK-kzK" secondAttribute="top" id="ffX-VN-2c0"/>
                             <constraint firstItem="De4-5t-PI4" firstAttribute="height" secondItem="j0b-sO-Ge2" secondAttribute="height" id="fft-bI-dnm"/>
                             <constraint firstItem="De4-5t-PI4" firstAttribute="width" secondItem="j0b-sO-Ge2" secondAttribute="width" id="htq-IW-KBy"/>
                             <constraint firstItem="XqE-w3-ZZJ" firstAttribute="leading" secondItem="Uiq-eK-kzK" secondAttribute="leading" id="iiE-Ez-ZFO"/>
-                            <constraint firstItem="De4-5t-PI4" firstAttribute="centerY" secondItem="Uiq-eK-kzK" secondAttribute="centerY" id="w00-5e-nkQ"/>
+                            <constraint firstItem="De4-5t-PI4" firstAttribute="centerY" secondItem="j0b-sO-Ge2" secondAttribute="centerY" id="w00-5e-nkQ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Uiq-eK-kzK"/>
                     </view>
