--- a/InstaDB/Views/ImageCollection/ImageCollection.storyboard
+++ b/InstaDB/Views/ImageCollection/ImageCollection.storyboard
@@ -15,11 +15,11 @@
             <objects>
                 <viewController id="mdU-1n-o7Y" customClass="ImageCollectionViewController" customModule="InstaDB" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ieY-a6-J3C">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="CKQ-El-Kip">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                                 <subviews>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="kby-Mt-lXT">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
@@ -77,12 +77,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="CKQ-El-Kip" firstAttribute="leading" secondItem="FFq-AY-Fes" secondAttribute="leading" id="3uV-YE-DCF"/>
-                            <constraint firstItem="CKQ-El-Kip" firstAttribute="top" secondItem="FFq-AY-Fes" secondAttribute="top" id="Sc5-o7-xMh"/>
+                            <constraint firstItem="CKQ-El-Kip" firstAttribute="top" secondItem="ieY-a6-J3C" secondAttribute="top" id="Sc5-o7-xMh"/>
                             <constraint firstAttribute="bottom" secondItem="CKQ-El-Kip" secondAttribute="bottom" id="Wo9-8H-k0P"/>
                             <constraint firstItem="FFq-AY-Fes" firstAttribute="trailing" secondItem="CKQ-El-Kip" secondAttribute="trailing" id="y4l-OK-zHL"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="FFq-AY-Fes"/>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <navigationItem key="navigationItem" id="uKW-bv-ojP">
                         <barButtonItem key="leftBarButtonItem" title="Sign Out" id="xJo-Ah-3UI">
                             <connections>
